force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <picklist>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>