force-app/main/default/objects/Account/fields/CustomerPriority__c.field-meta.xml
<CustomField>
    <fullName>CustomerPriority__c</fullName>
    <label>Customer Priority</label>
    <picklist>
        <picklistValues>
            <fullName>High</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Low</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Medium</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>