force-app/main/default/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <picklist>
        <picklistValues>
            <fullName>Gold</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Silver</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Platinum</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Bronze</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>