force-app/main/default/objects/Account/fields/UpsellOpportunity__c.field-meta.xml
<CustomField>
    <fullName>UpsellOpportunity__c</fullName>
    <label>Upsell Opportunity</label>
    <picklist>
        <picklistValues>
            <fullName>Maybe</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>